--- a/html/projects.html
+++ b/html/projects.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <title>Document</title>
 </head>
-
 <body>
     <nav>
         <input type="checkbox" id="check">
@@ -18,12 +16,11 @@
         </label>
         <label class="logo">Kouki Hosoyachi</label>
         <ul>
-            <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="html/projects.html">Projects</a></li>
-            <li><a href="html/contact.html">Contact</a></li>
+            <li><a class="active" href="../index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <section></section>
 </body>
-
 </html>
