--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Document</title>
 </head>
 
@@ -14,16 +15,37 @@
     <nav>
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars">&#8205</i>
         </label>
-        <label class="logo">Kouki Hosoyachi</label>
+        <label class="logo"><a href="index.html">Kouki Hosoyachi</a></label>
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
             <li><a href="html/projects.html">Projects</a></li>
+            <li><a href="html/interests.html">Interests</a></li>
             <li><a href="html/contact.html">Contact</a></li>
         </ul>
     </nav>
-    <section></section>
+
+    <div class="skip"><a href="#indexMain">Skip to Main Content</a></div>
+
+    <main class="indexContainer" id="indexMain">
+
+        <h1>HELLOOOOO</h1>
+    
+        <H1>About Me!</H1>
+
+    </main>
+
+
+    <footer>
+        <h1>Connect with me!</h1>
+        <div class="footerMain">
+            <a href="linkedin.com/in/kouki-hosoyachi-aba64b1b3" class="fa fa-linkedin">.</a>
+            <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">.</a>
+            <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">.</a>
+        </div>
+    </footer>
 </body>
+<script src="js/video.js"></script>
 
 </html>
