--- a/html/contact.html
+++ b/html/contact.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Document</title>
 </head>
 
@@ -14,39 +15,42 @@
     <nav>
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars">&#8205</i>
         </label>
-        <label class="logo">Kouki Hosoyachi</label>
+        <label class="logo"><a href="../index.html">Kouki Hosoyachi</a></label>
         <ul>
-            <li><a class="active" href="../index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="interests.html">Interests</a></li>
+            <li><a class="active" href="contact.html">Contact</a></li>
         </ul>
     </nav>
+    <div class="skip"><a href="#contactMain">Skip to Main Content</a></div>
 
 
 
-
-
-    <div>
-        <form action="/action_page.php">
+    <div class="contactContainer" id="contactMain">
+        <h1>Send me a message!</h1>
+        <form>
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
             <label for="lname">Last Name</label>
             <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-            <label for="country">Country</label>
-            <select id="country" name="country">
-                <option value="australia">Australia</option>
-                <option value="canada">Canada</option>
-                <option value="usa">USA</option>
-            </select>
-
+            <label for="message">Message</label>
+            <input type="text" id="message" name="message" placeholder="Your message...">
             <input type="submit" value="Submit">
         </form>
     </div>
-    <section></section>
+
+    <footer>
+        <h1>Connect with me!</h1>
+        <div class="footerMain">
+            <a href="linkedin.com/in/kouki-hosoyachi-aba64b1b3" class="fa fa-linkedin">.</a>
+            <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">.</a>
+            <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">.</a>
+        </div>
+    </footer>
 </body>
+<script src="../js/scripts.js"></script>
 
 </html>
