--- a/html/projects.html
+++ b/html/projects.html
@@ -1,26 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Document</title>
 </head>
+
 <body>
     <nav>
         <input type="checkbox" id="check">
         <label for="check" class="checkbtn">
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars">&#8205</i>
         </label>
-        <label class="logo">Kouki Hosoyachi</label>
+        <label class="logo"><a href="../index.html">Kouki Hosoyachi</a></label>
         <ul>
-            <li><a class="active" href="../index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a class="active" href="projects.html">Projects</a></li>
+            <li><a href="interests.html">Interests</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <section></section>
+
+    <div class="skip"><a href="#projectsMain">Skip to Main Content</a></div>
+
+
+    <h1>Projects and Experiences</h1>
+    <main class="projectsContainer" id="projectsMain">
+        <img src="../images/asteroids.PNG" alt="Asteroids Game">
+        <!-- <span>This is the asteroid game I created</span> -->
+        <img src="../images/tylertech.jpg" alt="Tyler Technologies">
+        <img src="../images/itunes.png" alt="Itunes">
+        <img src="../images/insta485.PNG" alt="insta485 Project">
+        <img src="../images/bofa.jpg" alt="Bank of America">
+        <img src="../images/annarbor.PNG" alt="Ann Arbor Suzuki Institute">
+        <img src="../images/officehours.PNG" alt="Office Hours Queue">
+        <img src="../images/mapreduce.png" alt="Map Reduce Project">
+        <img src="../images/ask485.png" alt="Google Search Engine Replica">
+    </main>
+
+
+
+    <footer>
+        <h1>Connect with me!</h1>
+
+     
+        <div class="footerMain">
+            <a href="linkedin.com/in/kouki-hosoyachi-aba64b1b3" class="fa fa-linkedin">.</a>
+            <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">.</a>
+            <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">.</a>
+        </div>
+    </footer>
 </body>
+<script src="../js/scripts.js"></script>
+
 </html>
