--- a/html/interests.html
+++ b/html/interests.html
@@ -12,22 +12,24 @@
 </head>
 
 <body>
-    <nav>
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
-            <i class="fas fa-bars">&#8205</i>
-        </label>
-        <label class="logo"><a href="../index.html">Kouki Hosoyachi</a></label>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a class="active" href="interests.html">Interests</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-
-    <div class="skip"><a href="#hobbiesMain">Skip to Main Content</a></div>
-
+    <header>
+        <nav>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <i class="fas fa-bars">&#8205</i>
+            </label>
+            <!-- <label class="logo"><a href="../index.html">Kouki Hosoyachi</a></label> -->
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a class="active" href="interests.html">Interests</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="skip">
+            <a href="#hobbiesMain">Skip to Main Content</a>
+        </div>
+    </header>
 
 
     <main class="interestsContainer" id="hobbiesMain">
@@ -53,12 +55,10 @@
 
     <footer>
         <h1>Connect with me!</h1>
-
-       
         <div class="footerMain">
-            <a href="linkedin.com/in/kouki-hosoyachi-aba64b1b3" class="fa fa-linkedin">.</a>
-            <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">.</a>
-            <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">.</a>
+            <a href="linkedin.com/in/kouki-hosoyachi-aba64b1b3" class="fa fa-linkedin">&#8205</a>
+            <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">&#8205</a>
+            <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205</a>
         </div>
     </footer>
 </body>
