--- a/html/contact.html
+++ b/html/contact.html
@@ -33,16 +33,35 @@
     </header>
 
     <main class="contactContainer" id="contactMain">
-        <h1>Send me a message!</h1>
-        <form>
-            <label for="fname">First Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name..">
-            <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-            <label for="message">Message</label>
-            <input type="text" id="message" name="message" placeholder="Your message...">
-            <input type="submit" value="Submit">
-        </form>
+        <h1>Contact Me</h1>
+        <p>I'd Love to chat!</p>
+        <div class="contactForm">
+            <form onsubmit="return false">
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                <br><br>
+                <label for="lname">Last Name</label>
+                <br>
+                <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                <br><br>
+                <label for="message">Personal Email</label>
+                <input type="text" id="email" name="email" placeholder="Your email...">
+                <br><br>
+                <label for="message">Phone Number</label>
+                <input type="text" id="number" name="number" placeholder="Your phone number...">
+                <br><br>
+                <label for="fname">Contact Me By</label>
+                <br><br>
+                <input type="radio" id="contactMethod" name="contact" value="male"> Email
+                <input type="radio" id="contactMethod" name="contact" value="female"> Phone
+                <br><br>
+                <label for="message">Leave a Message</label>
+                <input type="textarea" id="message" name="message" placeholder="Your message...">
+                <br><br>
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+
     </main>
 
     <footer>
