--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
                 <li><a href="html/interests.html">Interests</a></li>
                 <li><a href="html/contact.html">Contact</a></li>
             </ul>
+<!-- 
+            <div>
+                <input type="checkbox" class="checkbox" id="checkbox">
+                <label for="checkbox" class="checkbox-label">
+                  <i class="fas fa-moon"></i>
+                  <i class="fas fa-sun"></i>
+                  <span class="ball"></span>
+                </label>
+              </div> -->
         </nav>
     </header>
 
