--- a/html/contact.html
+++ b/html/contact.html
@@ -33,10 +33,14 @@
     </header>
 
     <main class="contactContainer" id="contactMain">
-        <h1>Contact Me</h1>
-        <p>I'd Love to chat!</p>
+        <div class="contactText">
+            <h1>Contact Me</h1>
+            <p>I'd Love to chat!</p>
+            <p></p>
+
+        </div>
         <div class="contactForm">
-            <form onsubmit="return false">
+            <form action="https://formspree.io/f/xbjbvlvb" method="POST">
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="firstname" placeholder="Your name..">
                 <br><br>
@@ -52,8 +56,8 @@
                 <br><br>
                 <label for="fname">Contact Me By</label>
                 <br><br>
-                <input type="radio" id="contactMethod" name="contact" value="male"> Email
-                <input type="radio" id="contactMethod" name="contact" value="female"> Phone
+                <input type="radio" id="contactMethod" name="contactMethod" value="email"> Email
+                <input type="radio" id="contactMethod" name="contactMethod" value="phone"> Phone
                 <br><br>
                 <label for="message">Leave a Message</label>
                 <input type="textarea" id="message" name="message" placeholder="Your message...">
