--- a/html/contact.html
+++ b/html/contact.html
@@ -22,7 +22,7 @@
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars">&#8205</i>
             </label>
-            <!-- <label class="logo"><a href="../index.html">Kouki Hosoyachi</a></label> -->
+            <a class="logo" href="index.html">Kouki Hosoyachi</a>
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -74,6 +74,12 @@
             <a href="linkedin.com/in/kouki-hosoyachi-aba64b1b3" class="fa fa-linkedin">&#8205</a>
             <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">&#8205</a>
             <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205</a>
+        </div>
+
+        <div class="navLinks">
+            <a href="html/interests.html">Interests</a>
+            <a href="html/projects.html">Projects</a>
+            <a href="html/contact.html">Contact</a>
         </div>
     </footer>
 </body>
