--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars">&#8205</i>
             </label>
-            <!-- <label class="logo"><a href="index.html">Kouki Hosoyachi</a></label> -->
+
+            <a class="logo" href="index.html">Kouki Hosoyachi</a>
             <ul>
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="html/projects.html">Projects</a></li>
@@ -43,8 +44,20 @@
     </header>
 
     <main class="indexContainer" id="indexMain">
-        <h1>HELLOOOOO</h1>
-        <H1>About Me!</H1>
+        <div class="aboutMe">
+            <img src="images/kouki.jpg" alt="Kouki Hosoyachi">
+            <div class="aboutMeText">
+                <h1>Hello! &#128075;</h1>
+                <h2>I am Kouki.</h2>
+                <p>I'm currently a Junior at the University of Michigan majoring in Computer Science and aspire to be a Full Stack Developer. 
+                    This summer, I'll be interning at Bank of America as a Software Engineer Intern. 
+                </p>
+                <p>I was born in Farmington Hills, MI, where I developed a strong interest in technology and its impact on society, 
+                    whether it be through applications or games. I enjoy utilizing my skillset to develop applications that have an impact on people's lives.</p>
+
+                <p>If you'd like to chat about anything, feel free to send me a message!</p>
+            </div>
+        </div>
     </main>
 
 
@@ -54,6 +67,12 @@
             <a href="linkedin.com/in/kouki-hosoyachi-aba64b1b3" class="fa fa-linkedin">&#8205</a>
             <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">&#8205</a>
             <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205</a>
+        </div>
+
+        <div class="navLinks">
+            <a href="html/interests.html">Interests</a>
+            <a href="html/projects.html">Projects</a>
+            <a href="html/contact.html">Contact</a>
         </div>
     </footer>
 </body>
