--- a/html/interests.html
+++ b/html/interests.html
@@ -22,7 +22,7 @@
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars">&#8205</i>
             </label>
-            <!-- <label class="logo"><a href="../index.html">Kouki Hosoyachi</a></label> -->
+            <a class="logo" href="index.html">Kouki Hosoyachi</a>
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -34,23 +34,32 @@
 
 
     <main class="interestsContainer" id="hobbiesMain">
-        <h1>Favorite Dogs </h1>
-        <img src="../images/bigdoge.jpg" alt="Husky with Tongue out">
-        <img src="../images/doge.jpg" alt="Golden Retreiver">
-        <img src="../images/maya.png" alt="Maya the Polar Bear Samoyed">
-        <h1>Favorite Games</h1>
-        <img src="../images/league-of-legends.jpg" alt="League of Legends">
-        <img src="../images/overwatch2.jpg" alt="Overwatch 2">
-        <img src="../images/valorant.jpg" alt="Valorant">
-        <h1> Sports</h1>
-        <img src="../images/block-m-feed.jpg" alt="Michigan Logo">
-        <img src="../images/pistons.jpg" alt="Detroit Pistons">
-        <img src="../images/lions.jpg" alt="Detroit Lions">
-        <h1>Foods</h1>
-        <img src="../images/pasta.jpeg" alt="I love pasta">
-        <img src="../images/salmon.jpg" alt="Crispy Salmon">
-        <img src="../images/chicken.jpg" alt="Chicken Sandwich">
+        <div class="favDogs">
+            <h1>Favorite Dogs </h1>
+            <img src="../images/bigdoge.jpg" alt="Husky with Tongue out">
+            <img src="../images/doge.jpg" alt="Golden Retreiver">
+            <img src="../images/maya.png" alt="Maya the Polar Bear Samoyed">
+        </div>
 
+        <div class="favGames">
+            <h1>Favorite Games</h1>
+            <img src="../images/league-of-legends.jpg" alt="League of Legends">
+            <img src="../images/overwatch2.jpg" alt="Overwatch 2">
+            <img src="../images/valorant.jpg" alt="Valorant">
+        </div>
+
+        <div class="favSports">
+            <h1> Sports</h1>
+            <img src="../images/block-m-feed.jpg" alt="Michigan Logo">
+            <img src="../images/pistons.jpg" alt="Detroit Pistons">
+            <img src="../images/lions.jpg" alt="Detroit Lions">
+        </div>
+        <div class="favFoods">
+            <h1>Foods</h1>
+            <img src="../images/pasta.jpeg" alt="I love pasta">
+            <img src="../images/salmon.jpg" alt="Crispy Salmon">
+            <img src="../images/chicken.jpg" alt="Chicken Sandwich">
+        </div>
     </main>
 
 
@@ -60,6 +69,12 @@
             <a href="linkedin.com/in/kouki-hosoyachi-aba64b1b3" class="fa fa-linkedin">&#8205</a>
             <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">&#8205</a>
             <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205</a>
+        </div>
+
+        <div class="navLinks">
+            <a href="html/interests.html">Interests</a>
+            <a href="html/projects.html">Projects</a>
+            <a href="html/contact.html">Contact</a>
         </div>
     </footer>
 </body>
