--- a/html/projects.html
+++ b/html/projects.html
@@ -22,7 +22,7 @@
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars">&#8205</i>
             </label>
-            <!-- <<label class="logo">><a href="../index.html">Kouki Hosoyachi</a></label> -->
+            <a class="logo" href="index.html">Kouki Hosoyachi</a>
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a class="active" href="projects.html">Projects</a></li>
@@ -30,21 +30,40 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        <h1>Projects and Experiences</h1>
-
     </header>
 
     <main class="projectsContainer" id="projectsMain">
-        <img src="../images/asteroids.PNG" alt="Asteroids Game">
-        <!-- <span>This is the asteroid game I created</span> -->
-        <img src="../images/tylertech.jpg" alt="Tyler Technologies">
-        <img src="../images/itunes.png" alt="Itunes">
-        <img src="../images/insta485.PNG" alt="insta485 Project">
-        <img src="../images/bofa.jpg" alt="Bank of America">
-        <img src="../images/annarbor.PNG" alt="Ann Arbor Suzuki Institute">
-        <img src="../images/officehours.PNG" alt="Office Hours Queue">
-        <img src="../images/mapreduce.png" alt="Map Reduce Project">
-        <img src="../images/ask485.png" alt="Google Search Engine Replica">
+        <h1>Projects and Experiences</h1>
+        <div class="projects">
+            <div class="project-Image1">
+                <img src="../images/asteroids.PNG" alt="Asteroids Game">
+            </div>
+            <div class="project-Image2">
+                <img src="../images/tylertech.jpg" alt="Tyler Technologies">
+            </div>
+            <div class="project-Image3">
+                <img src="../images/itunes.png" alt="Itunes">
+            </div>
+            <div class="project-Image4">
+                <img src="../images/insta485.PNG" alt="insta485 Project">
+            </div>
+            <div class="project-Image5">
+                <img src="../images/bofa.jpg" alt="Bank of America">
+            </div>
+            <div class="project-Image6">
+                <img src="../images/annarbor.PNG" alt="Ann Arbor Suzuki Institute">
+            </div>
+            <div class="project-Image7">
+                <img src="../images/officehours.PNG" alt="Office Hours Queue">
+            </div>
+            <div class="project-Image8">
+                <img src="../images/mapreduce.png" alt="Map Reduce Project">
+            </div>
+            <div class="project-Image9">
+                <img src="../images/ask485.png" alt="Google Search Engine Replica">
+            </div>
+        </div>
+
     </main>
 
 
@@ -55,6 +74,12 @@
             <a href="linkedin.com/in/kouki-hosoyachi-aba64b1b3" class="fa fa-linkedin">&#8205</a>
             <a href="https://www.instagram.com/kouki_hosoyachi/" class="fa fa-instagram">&#8205</a>
             <a href="https://www.facebook.com/kouki.hosoyachi.1" class="fa fa-facebook">&#8205</a>
+        </div>
+
+        <div class="navLinks">
+            <a href="html/interests.html">Interests</a>
+            <a href="html/projects.html">Projects</a>
+            <a href="html/contact.html">Contact</a>
         </div>
     </footer>
 </body>
