--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Bootstrap-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+        integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/styles.css">
+    <!-- Icons  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <title>Document</title>
+    <title>Home</title>
 </head>
 
 <body>
@@ -49,13 +60,18 @@
             <div class="aboutMeText">
                 <h1>Hello! &#128075;</h1>
                 <h2>I am Kouki.</h2>
-                <p>I'm currently a Junior at the University of Michigan majoring in Computer Science and aspire to be a Full Stack Developer. 
-                    This summer, I'll be interning at Bank of America as a Software Engineer Intern. 
+                <p>I'm currently a Junior at the University of Michigan majoring in Computer Science and aspire to be a
+                    Full Stack Developer.
+                    This summer, I'll be interning at Bank of America as a Software Engineer Intern.
                 </p>
-                <p>I was born in Farmington Hills, MI, where I developed a strong interest in technology and its impact on society, 
-                    whether it be through applications or games. I enjoy utilizing my skillset to develop applications that have an impact on people's lives.</p>
+                <p>I was born in Farmington Hills, MI, where I developed a strong interest in technology and its impact
+                    on society,
+                    whether it be through applications or games. I enjoy utilizing my skillset to develop applications
+                    that have an impact on people's lives.</p>
 
                 <p>If you'd like to chat about anything, feel free to send me a message!</p>
+
+                <p><a class="btn btn-primary btn-lg" href="https://docs.google.com/document/d/1UUBgVVOJc7U1q1pfxk1vaGdZ9dANNJGG/edit?usp=sharing&ouid=117224877282825047349&rtpof=true&sd=true" role="button">Resume</a></p>
             </div>
         </div>
     </main>
