--- a/html/contact.html
+++ b/html/contact.html
@@ -33,7 +33,7 @@
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars">&#8205</i>
             </label>
-            <a class="logo" href="index.html">Kouki Hosoyachi</a>
+            <a class="logo" href="../index.html">Kouki Hosoyachi</a>
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
