--- a/html/interests.html
+++ b/html/interests.html
@@ -33,7 +33,7 @@
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars">&#8205</i>
             </label>
-            <a class="logo" href="index.html">Kouki Hosoyachi</a>
+            <a class="logo" href="../index.html">Kouki Hosoyachi</a>
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -42,34 +42,36 @@
             </ul>
         </nav>
     </header>
-
+    
 
     <main class="interestsContainer" id="hobbiesMain">
-        <div class="favDogs">
+        <div class="favSets">
             <h1>Favorite Dogs </h1>
             <img src="../images/bigdoge.jpg" alt="Husky with Tongue out">
+            <p>Alaskan Malamute </p>
             <img src="../images/doge.jpg" alt="Golden Retreiver">
             <img src="../images/maya.png" alt="Maya the Polar Bear Samoyed">
         </div>
 
-        <div class="favGames">
+        <div class="favSets">
             <h1>Favorite Games</h1>
             <img src="../images/league-of-legends.jpg" alt="League of Legends">
             <img src="../images/overwatch2.jpg" alt="Overwatch 2">
             <img src="../images/valorant.jpg" alt="Valorant">
         </div>
 
-        <div class="favSports">
+        <div class="favSets">
             <h1> Sports</h1>
             <img src="../images/block-m-feed.jpg" alt="Michigan Logo">
             <img src="../images/pistons.jpg" alt="Detroit Pistons">
             <img src="../images/lions.jpg" alt="Detroit Lions">
         </div>
-        <div class="favFoods">
+        <div class="favSets">
             <h1>Foods</h1>
             <img src="../images/pasta.jpeg" alt="I love pasta">
             <img src="../images/salmon.jpg" alt="Crispy Salmon">
             <img src="../images/chicken.jpg" alt="Chicken Sandwich">
+            <p></p>
         </div>
     </main>
 
