--- a/html/projects.html
+++ b/html/projects.html
@@ -33,7 +33,7 @@
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars">&#8205</i>
             </label>
-            <a class="logo" href="index.html">Kouki Hosoyachi</a>
+            <a class="logo" href="../index.html">Kouki Hosoyachi</a>
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a class="active" href="projects.html">Projects</a></li>
@@ -46,32 +46,72 @@
     <main class="projectsContainer" id="projectsMain">
         <h1>Projects and Experiences</h1>
         <div class="projects">
-            <div class="project-Image1">
+            <div class="projectItems">
+                <p>Asteroid Game</p>
                 <img src="../images/asteroids.PNG" alt="Asteroids Game">
+                <div class="inDepthInformation">
+                    <div class="alert alert-info" role="alert"> First experience with JS. Mostly used JQuery to alter screens upon user clicks.</div>
+                    <!-- First experience with JS. Mostly used JQuery to alter screens upon user clicks. -->
+                </div>
             </div>
-            <div class="project-Image2">
+            <div class="projectItems">
+                <p>Tyler Technologies Internship</p>
                 <img src="../images/tylertech.jpg" alt="Tyler Technologies">
+                <div class="inDepthInformation">
+                    <div class="alert alert-info" role="alert"> First experience with JS. Mostly used JQuery to alter screens upon user clicks.</div>
+                    <!-- First experience with JS. Mostly used JQuery to alter screens upon user clicks. -->
+                </div>
             </div>
-            <div class="project-Image3">
+            <div class="projectItems">
+                <p>Artist Search</p>
                 <img src="../images/itunes.png" alt="Itunes">
+                <div class="inDepthInformation">
+                    <div class="alert alert-info" role="alert"> First experience with JS. Mostly used JQuery to alter screens upon user clicks.</div>
+
+                    <!-- First experience with JS. Mostly used JQuery to alter screens upon user clicks. -->
+                </div>
             </div>
-            <div class="project-Image4">
+            <div class="projectItems">
+                <p>Insta485</p>
                 <img src="../images/insta485.PNG" alt="insta485 Project">
+                <div class="inDepthInformation">
+                    First experience with JS. Mostly used JQuery to alter screens upon user clicks.
+                </div>
             </div>
-            <div class="project-Image5">
+            <div class="projectItems">
+                <p>Bank of America Internship</p>
                 <img src="../images/bofa.jpg" alt="Bank of America">
+                <div class="inDepthInformation">
+                    First experience with JS. Mostly used JQuery to alter screens upon user clicks.
+                </div>
             </div>
-            <div class="project-Image6">
+            <div class="projectItems">
+                <p>Ann Arbor Suzuki Institute</p>
                 <img src="../images/annarbor.PNG" alt="Ann Arbor Suzuki Institute">
+                <div class="inDepthInformation">
+                    First experience with JS. Mostly used JQuery to alter screens upon user clicks.
+                </div>
             </div>
-            <div class="project-Image7">
+            <div class="projectItems">
+                <p>Office Hours Queue</p>
                 <img src="../images/officehours.PNG" alt="Office Hours Queue">
+                <div class="inDepthInformation">
+                    First experience with JS. Mostly used JQuery to alter screens upon user clicks.
+                </div>
             </div>
-            <div class="project-Image8">
+            <div class="projectItems">
+                <p>Map Reduce</p>
                 <img src="../images/mapreduce.png" alt="Map Reduce Project">
+                <div class="inDepthInformation">
+                    First experience with JS. Mostly used JQuery to alter screens upon user clicks.
+                </div>
             </div>
-            <div class="project-Image9">
+            <div class="projectItems">
+                <p>Ask485</p>
                 <img src="../images/ask485.png" alt="Google Search Engine Replica">
+                <div class="inDepthInformation">
+                    First experience with JS. Mostly used JQuery to alter screens upon user clicks.
+                </div>
             </div>
         </div>
 
