--- a/html/interests.html
+++ b/html/interests.html
@@ -53,12 +53,12 @@
             <img src="../images/maya.png" alt="Maya the Polar Bear Samoyed">
         </div>
 
-        <div class="favSets">
+        <!-- <div class="favSets">
             <h1>Favorite Games</h1>
             <img src="../images/league-of-legends.jpg" alt="League of Legends">
             <img src="../images/overwatch2.jpg" alt="Overwatch 2">
             <img src="../images/valorant.jpg" alt="Valorant">
-        </div>
+        </div> -->
 
         <div class="favSets">
             <h1> Sports</h1>
