--- a/html/projects.html
+++ b/html/projects.html
@@ -15,6 +15,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
+
+    <!-- jquery -->
+    <script src='../js/'></script>
+    <!-- My styles -->
     <link rel="stylesheet" href="../css/html5reset.css">
     <link rel="stylesheet" href="../css/styles.css">
     <!-- Icons  -->
@@ -50,7 +54,8 @@
                 <p>Asteroid Game</p>
                 <img src="../images/asteroids.PNG" alt="Asteroids Game">
                 <div class="inDepthInformation">
-                    <div class="alert alert-info" role="alert"> First experience with JS. Mostly used JQuery to alter screens upon user clicks.</div>
+                    <div class="alert alert-info" role="alert"> First experience with JS. Mostly used JQuery to alter
+                        screens upon user clicks.</div>
                     <!-- First experience with JS. Mostly used JQuery to alter screens upon user clicks. -->
                 </div>
             </div>
@@ -58,7 +63,8 @@
                 <p>Tyler Technologies Internship</p>
                 <img src="../images/tylertech.jpg" alt="Tyler Technologies">
                 <div class="inDepthInformation">
-                    <div class="alert alert-info" role="alert"> First experience with JS. Mostly used JQuery to alter screens upon user clicks.</div>
+                    <div class="alert alert-info" role="alert"> First experience with JS. Mostly used JQuery to alter
+                        screens upon user clicks.</div>
                     <!-- First experience with JS. Mostly used JQuery to alter screens upon user clicks. -->
                 </div>
             </div>
@@ -66,7 +72,8 @@
                 <p>Artist Search</p>
                 <img src="../images/itunes.png" alt="Itunes">
                 <div class="inDepthInformation">
-                    <div class="alert alert-info" role="alert"> First experience with JS. Mostly used JQuery to alter screens upon user clicks.</div>
+                    <div class="alert alert-info" role="alert"> First experience with JS. Mostly used JQuery to alter
+                        screens upon user clicks.</div>
 
                     <!-- First experience with JS. Mostly used JQuery to alter screens upon user clicks. -->
                 </div>
@@ -74,9 +81,21 @@
             <div class="projectItems">
                 <p>Insta485</p>
                 <img src="../images/insta485.PNG" alt="insta485 Project">
-                <div class="inDepthInformation">
-                    First experience with JS. Mostly used JQuery to alter screens upon user clicks.
+                <ul class="nav nav-tabs">
+                    <li role="presentation" class="active"><a data-toggle="tab" role="tab" href="#description">Description</a></li>
+                    <li role="presentation"><a data-toggle="tab" role="tab" href="#timeFrame">Time Frame</a></li>
+                </ul>
+                <div class="tab-content">
+                    <div role="tabpanel" id="description"class="tab-pane fade in active">
+                        <p>huh</p>
+                    </div>
+                    <div role="tabpanel" id="timeFrame"class="tab-pane fade">
+                        <p>what</p>
+                    </div>  
                 </div>
+                <!-- <div class="inDepthInformation">
+                    First experience with JS. Mostly used JQuery to alter screens upon user clicks.
+                </div> -->
             </div>
             <div class="projectItems">
                 <p>Bank of America Internship</p>
