--- a/html/projects.html
+++ b/html/projects.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WMZNEEKSKK"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-WMZNEEKSKK');
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -82,16 +91,17 @@
                 <p>Insta485</p>
                 <img src="../images/insta485.PNG" alt="insta485 Project">
                 <ul class="nav nav-tabs">
-                    <li role="presentation" class="active"><a data-toggle="tab" role="tab" href="#description">Description</a></li>
+                    <li role="presentation" class="active"><a data-toggle="tab" role="tab"
+                            href="#description">Description</a></li>
                     <li role="presentation"><a data-toggle="tab" role="tab" href="#timeFrame">Time Frame</a></li>
                 </ul>
                 <div class="tab-content">
-                    <div role="tabpanel" id="description"class="tab-pane fade in active">
+                    <div role="tabpanel" id="description" class="tab-pane fade in active">
                         <p>huh</p>
                     </div>
-                    <div role="tabpanel" id="timeFrame"class="tab-pane fade">
+                    <div role="tabpanel" id="timeFrame" class="tab-pane fade">
                         <p>what</p>
-                    </div>  
+                    </div>
                 </div>
                 <!-- <div class="inDepthInformation">
                     First experience with JS. Mostly used JQuery to alter screens upon user clicks.
