--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WMZNEEKSKK"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-WMZNEEKSKK');
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +39,7 @@
 
     <header>
         <nav>
-            <input type="checkbox" i    d="check">
+            <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
                 <i class="fas fa-bars">&#8205</i>
             </label>
@@ -71,7 +80,9 @@
 
                 <p>If you'd like to chat about anything, feel free to send me a message!</p>
 
-                <p><a class="btn btn-primary btn-lg" href="https://docs.google.com/document/d/1UUBgVVOJc7U1q1pfxk1vaGdZ9dANNJGG/edit?usp=sharing&ouid=117224877282825047349&rtpof=true&sd=true" role="button">Resume</a></p>
+                <p><a class="btn btn-primary btn-lg"
+                        href="https://docs.google.com/document/d/1UUBgVVOJc7U1q1pfxk1vaGdZ9dANNJGG/edit?usp=sharing&ouid=117224877282825047349&rtpof=true&sd=true"
+                        role="button">Resume</a></p>
             </div>
         </div>
     </main>
